# rlottie

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Package.swift  README.md  arm_build.sh  arm_cross.txt  format  meson.build  meson_options.txt  rlottie.expmap  wasm_build.sh  wasm_cross.txt
.Gifs/: rlottie.xcf
Swift/: Animation.swift  AnimationFrame.swift  AnimationWrapper.swift  FramesExtractor.swift  FramesExtractorConfig.swift  Renderer.swift
benchmarks/: README.md  adjudicate_lottie_frames.py  audit_thorvg_corpus.py  compare_lottie_engines.py  compare_rlottie_builds.py  support_matrix_seed.csv  thorvg_example_smoke.txt  tizen_cpu_corpus.txt
cmake/: config.h.in  rlottieConfig.cmake.in
docs/: THORVG_COMPETITION_PLAN.md  THORVG_STATUS_KO.md
example/: CMakeLists.txt  demo.cpp  demo_marker.cpp  evasapp.cpp  evasapp.h  lottie2gif.cpp  lottiebench.cpp  lottieperf.cpp  lottieview.cpp  lottieview.h  lottieviewer.cpp  lottieviewtest.cpp  meson.build  pathtest.cpp  thorvgbench.cpp  uxsampletest.cpp
example/resource/: 000_TextAnimation_Rotation.json  000_hgl_FillOverStroke.json  000_hgl_Rotation.json  000_hgl_Tracking.json  0707_TextAnimation_Opacity_Rotation.json  10896-text-animation-sale-off.json  19659-sliced-text-choose-your-fighter.json  7307-text-animation-yes.json  TextStrokeTest_font_136_Stroke_10_to_27.json  Text_Test_HELL_3_RangeSelector.json  blendmode_color.json  blendmode_color_burn.json  blendmode_color_dodge.json  blendmode_darken.json  blendmode_difference.json  blendmode_exclusion.json  blendmode_hardlight.json  blendmode_hue.json  blendmode_lighten.json  blendmode_luminosity.json  blendmode_multiply.json  blendmode_overlay.json  blendmode_saturation.json  blendmode_screen.json  blendmode_softlight.json  expression_stroke_controller_subset.json  fractional_precomp_size.json  layer_effect_4color_gradient_blend50.json  layer_effect_4color_gradient_solid.json  layer_effect_bevel_alpha_scale_expr.json  layer_effect_bevel_alpha_solid.json  layer_effect_box_blur_solid.json  layer_effect_fill_precomp.json  layer_effect_fill_solid.json  layer_effect_stroke_all_original.json  layer_effect_stroke_reveal_original.json  layer_effect_stroke_solid.json  layer_effect_stroke_tint_stack.json  layer_effect_tint_precomp.json  layer_effect_tint_solid.json  (+13 more)
example/resource/test/: repro_infinite_loop.json  repro_propertyhelper_type_confusion1.json  repro_sbof.json
example/rlottiePlayer/: Source.cpp  animation.h  resource.h  rlottie.lib  rlottiePlayer.cpp  rlottiePlayer.h  rlottiePlayer.rc  rlottiePlayer.vcxproj  rlottiePlayer.vcxproj.filters
example/win32Player/: resource.h  rlottiePlayer.cpp  rlottiePlayer.sln  rlottiePlayer.vcxproj  rlottiePlayer.vcxproj.filters
inc/: CMakeLists.txt  config.h  rlottie.h  rlottie_capi.h  rlottiecommon.h
inc_c/: rlottie_capi.h  rlottiecommon.h
packaging/: rlottie.spec
src/: CMakeLists.txt  inc  inc_c  inc_cpp  meson.build
src/binding/c/: CMakeLists.txt  lottieanimation_capi.cpp
src/lottie/: CMakeLists.txt  lottieanimation.cpp  lottiefiltermodel.h  lottieitem.cpp  lottieitem.h  lottieitem_capi.cpp  lottiekeypath.cpp  lottiekeypath.h  lottieloader.cpp  lottieloader.h  lottiemodel.cpp  lottiemodel.h  lottieparser.cpp  lottieparser.h  lottieproxymodel.h  lottieroparser.cpp  meson.build  perfprofile.h
src/lottie/zip/: CMakeLists.txt  meson.build  zip.cpp  zip.h
src/vector/: CMakeLists.txt  meson.build  varenaalloc.h  vbezier.cpp  vbezier.h  vbitmap.cpp  vbitmap.h  vbrush.cpp  vbrush.h  vcowptr.h  vdasher.cpp  vdasher.h  vdebug.cpp  vdrawable.cpp  vdrawable.h  vdrawhelper.cpp  vdrawhelper.h  vdrawhelper_common.cpp  vdrawhelper_neon.cpp  vglobal.h  vimageloader.cpp  vline.h  vmatrix.cpp  vmatrix.h  vpainter.cpp  vpainter.h  vpath.cpp  vpath.h  vpathmesure.cpp  vpathmesure.h  vraster.cpp  vraster.h  vrle.cpp  vrle.h  vsharedptr.h  vvector.h
src/vector/freetype/: CMakeLists.txt  v_ft_raster.cpp  v_ft_raster.h  v_ft_stroker.cpp  v_ft_types.h
src/vector/pixman/: CMakeLists.txt  meson.build  vregion.cpp
src/vector/stb/: CMakeLists.txt  meson.build  stb_image.cpp  stb_image.h
src/vector/text/: CMakeLists.txt  meson.build  vfont.cpp  vfont.h  vtextshaper.cpp  vtextshaper.h
src/wasm/: meson.build  rlottiewasm.cpp
test/: CMakeLists.txt  test_lottieanimation.cpp  test_lottieanimation_capi.cpp  wasm_test.html
vs2019/: config.h  resource.h  rlottie.rc  rlottie.vcxproj  rlottie.vcxproj.filters  version.h
xcode/: config.h
xcode/rlottie.xcodeproj/: project.pbxproj
xcode/rlottie.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/rlottie.xcodeproj/xcshareddata/xcschemes/: rlottie.xcscheme
멘토링/: 0915.md
