option('thread',
   type: 'boolean',
   value: true,
   description: 'Enable threading in rlottie')

option('cache',
   type: 'boolean',
   value: true,
   description: 'Enable cache support in rlottie')

option('module',
   type: 'boolean',
   value: true,
   description: 'Enable module support in rlottie')

option('moduledir',
   type: 'string',
   description: 'Dynamic plugins directory')

option('log',
   type: 'boolean',
   value: false,
   description: 'Enable logging in rlottie')

option('dumptree',
   type: 'boolean',
   value: false,
   description: 'Enable logging the rlottie tree in rlottie')

option('test',
   type: 'boolean',
   value: false,
   description: 'Enable building unit tests')

option('example',
   type: 'boolean',
   value: true,
   description: 'Enable building examples')

option('ext-font',
   type: 'boolean',
   value: false,
   description: 'Enable external font support')

option('cmake',
  type: 'boolean',
  value: false,
  description: 'Enable Generating  CMake config files')



